<resources>
    <!-- Home Screen -->
    <string name="home_title">Travel Ticketing System</string>
    <string name="home_note1">Choose a task you want</string>
    <string name="btn_new_card">New Ticket</string>
    <string name="btn_topup_card">Top up</string>

    <string name="app_name">Ticket Creator</string>
    <string name="personal_info">Personal Information</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="contactNo">Contact Number</string>
    <string name="NIC">NIC Number</string>
    <string name="select_travel_card">Pick a travel card</string>
    <string name="btn_next">Next</string>
    <string name="btn_back">Back</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>
    <string name="payment_method">Payment Method</string>
    <string name="payment_method_cash">Cash</string>
    <string name="payment_method_credit">Credit Card</string>

    <!-- Pay with Card -->
    <string name="card_title">Add a Card</string>
    <string name="card_holder_name">Cardholder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry</string>
    <string name="expiry_date_format">MM/YYYY</string>
    <string name="creditCardCcv">CCV</string>

    <!-- Pay with Cash -->
    <string name="pay_with_cash_title">Pay with Cash</string>
    <string name="your_amount">Your Amount</string>
    <string name="service_fee">Service Fee</string>
    <string name="amount_to_pay">Amount to be paid</string>
    <string name="cash_note1">- In order to pay, please insert the banknote to the cash deposit slot.</string>
    <string name="cash_note2">- If you want to pay more, please insert the next banknote.</string>
    <string name="cash_note3">- Insert notes one by one.</string>
    <string name="cash_note4">- No cash back, No change.</string>
    <string name="cash_note5">- LKR 20, 50, 100, 500, 1000, 2000, 5000 banknotes are accepted.</string>

    <!-- Payment successful -->
    <string name="payment_complete">Successful Purchase!</string>
    <string name="button_finish">Finish</string>
    <string name="date">Date</string>
    <string name="details">Name</string>
    <string name="transaction_number">Transaction Number</string>
    <string name="order_total">Order Total</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Topup Values Fragment -->
    <string-array name="topupSpinner">
        <item>1000</item>
        <item>750</item>
        <item>500</item>
        <item>250</item>
    </string-array>

</resources>
