<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1_1"
    tools:context="com.csse.ticketcreator.Fragments.PaymentMethodFragment">


    <Button
        android:id="@+id/btnPaymentMethodBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_next_style"
        android:drawableLeft="@drawable/ic_navigate_before_white_18dp"
        android:text="Button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="139dp"
        android:layout_height="134dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/rbCash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method_cash" />

        <RadioButton
            android:id="@+id/rbCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/payment_method_credit" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_method"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPaymentMethodNext"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="123dp"
        android:layout_height="60dp"
        android:layout_marginRight="7dp"
        android:text="@string/btn_next"
        android:background="@drawable/btn_next_style"
        android:drawableRight="@drawable/ic_navigate_next_white_18dp"
        android:textSize="30sp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="513dp" />
</android.support.constraint.ConstraintLayout>
