<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1_1"
    tools:context="com.csse.ticketcreator.Fragments.SuccesfullPaymentFragment">


    <ImageView
        android:id="@+id/imgSuccessMessage"
        android:layout_width="0dp"
        android:layout_height="77dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.6" />

    <ImageView
        android:id="@+id/imgQrCode"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgSuccessMessage"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />

    <TextView
        android:id="@+id/txtSuccesfullMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/payment_complete"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/colorFont10"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgQrCode" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginTop="16dp"
        android:text="@string/date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSuccesfullMessage" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/details"
        app:layout_constraintLeft_toLeftOf="@+id/textView19"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/transaction_number"
        app:layout_constraintLeft_toLeftOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="24dp"
        android:text="@string/order_total"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/txtTransactionDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView19"
        app:layout_constraintLeft_toRightOf="@+id/textView19"
        android:layout_marginLeft="150dp" />

    <TextView
        android:id="@+id/txtTransactionDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView20"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txtTransactionDate" />

    <TextView
        android:id="@+id/txtTransactionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView21"
        android:layout_marginRight="0dp"
        app:layout_constraintRight_toRightOf="@+id/txtTransactionDetails" />

    <TextView
        android:id="@+id/txtOrderTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView22"
        app:layout_constraintRight_toRightOf="@+id/txtTransactionNumber" />

    <Button
        android:id="@+id/button3"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_finish"
        android:layout_marginRight="31dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtOrderTotal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_next_style"
        android:drawableLeft="@drawable/ic_done_all_white_18dp"
        app:layout_constraintVertical_bias="0.233" />
</android.support.constraint.ConstraintLayout>
